@@ -5459,3 +5459,4 @@ v0.92.0.11:
     - Closes #4521.
   - Add onTownSetHomeBlock() to FlagWarCustomListener.
   - Fire TownPreAddResidentEvent only when it is not being run by an admin or the console.
+  - Fix NPC-run capital city's nations paying upkeep costs.
